--- a/style.css
+++ b/style.css
@@ -1,17 +1,38 @@
-.header {
-    background-color:#1F2937;
-    display:flex;
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
-.header div {
-    flex: 1;
+.header {
+    background-color:#1F2937;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    padding-right: 0px;
+    padding-left: 100px;
+    align-items: center;
 }
 
 .logo {
     color:#F9FAF8;
+    margin-right: auto;
     font-size: 24px;
 }
-.link {
+
+.links {
+    display: flex;
+    padding-right: 100px;
+}
+
+.links ul{
+    list-style-type: none;
+    display: flex;
+    gap: 8px;
+}
+
+a {
+    text-decoration: none;
     color:#E5E7EB;
     font-size: 18px;
 }
