--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
+/* header */
 .header {
     background-color:#1F2937;
     display: flex;
     justify-content: space-between;
     padding: 20px;
     padding-right: 0px;
-    padding-left: 100px;
+    padding-left: 200px;
     align-items: center;
 }
 
@@ -18,11 +19,12 @@ body {
     color:#F9FAF8;
     margin-right: auto;
     font-size: 24px;
+    font-weight: 900;
 }
 
 .links {
     display: flex;
-    padding-right: 100px;
+    padding-right: 200px;
 }
 
 .links ul{
@@ -35,4 +37,89 @@ a {
     text-decoration: none;
     color:#E5E7EB;
     font-size: 18px;
+}
+
+/* hero */
+
+.hero {
+    display: flex;
+    background-color: #1F2937;  
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    gap: 2px;
+}
+
+.lefttext {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    padding-left: 200px;
+    align-items: start;
+    gap: 8px;
+}
+
+.main {
+    font-weight: 900;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border-radius: 8px;
+    padding: 8px;
+    width: 100px;
+}
+
+.rightpic {
+    background-color: gray;
+    width: 750px;
+    height: 200px;
+    margin-right: 200px;
+}
+
+.information {
+    padding-top: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.info {
+    font-size: 36px;
+    font-weight: 900;
+    color:#1F2937;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    gap: 50px;
+}
+
+.card-img {
+    display: flex;
+    height: 150px;
+    width: 150px;
+    border-radius: 5px;
+    border: 2px solid #3882F6;
+    align-items: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+    align-items: center;
 }
