--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", Helvetica, sans-serif;
 }
 /* header */
 .header {
@@ -122,4 +122,25 @@ button {
     flex-direction: column;
     max-width: 200px;
     align-items: center;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: start;
+    background-color: #E5E7EB;
+    padding: 50px 300px;
+    color: #1F2937;
+}
+
+.quote-container em {
+    font-size: 36px;
+    font-weight: 100;
+}
+
+#signature {
+    align-self: flex-end;
+    font-weight: bolder;
+    font-size: 24px;
 }
