--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button {
 }
 
 .information {
-    padding-top: 8px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -143,4 +143,29 @@ button {
     align-self: flex-end;
     font-weight: bolder;
     font-size: 24px;
+}
+
+.call-to-action {
+    background-color: #3882F6;
+    border-radius: 5px;
+    margin: 50px 200px;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sign-up {
+    font-size: 18px;
+    text-align: start;
+    color: #E5E7EB;
+}
+
+.sign-up p {
+    margin: 0;
+}
+
+.call-to-action button {
+    border: 2px solid #E5E7EB;
+    border-radius: 5px;
 }
