--- a/style.css
+++ b/style.css
@@ -169,3 +169,12 @@ button {
     border: 2px solid #E5E7EB;
     border-radius: 5px;
 }
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+}
