--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ a {
 }
 
 .lefttext {
+    flex: 1;
     display: flex;
     flex-direction: column;
     text-align: start;
@@ -80,11 +81,17 @@ button {
 }
 
 .rightpic {
-    background-color: gray;
-    width: 750px;
-    height: 200px;
-    margin-right: 200px;
+    flex: 1;
+    height: 276px;
+    margin-right: 125px;
 }
+
+.rightpic img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* information */
 
 .information {
     padding: 50px;
@@ -115,6 +122,11 @@ button {
     border-radius: 5px;
     border: 2px solid #3882F6;
     align-items: center;
+}
+
+.card-img img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .card {
